--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 nav {
-    background-color: #b2e1ff;
+    background-color: #505050;
     padding: 20px;
     display: flex;
     justify-content: center;
@@ -17,21 +17,28 @@ nav {
 nav a {
     padding: 10px 20px;
     text-decoration: none;
-    color: #0172BA;
-    border: 2px solid #0172BA;
-    background-color: white;
+    color: #ffffff;
+    border: 2px solid #ffffff;
+    background-color: rgb(0, 0, 0);
     font-weight: bold;
 }
 
-a {
-    text-decoration: none;
+li {
+    list-style-type: none;
 }
 
 header {
+    color: aliceblue;
     align-content: center;
     background-color: aliceblue;
     text-align: center;
     height: 200px;
+    background: url('StarGif.gif') top center repeat-y;
+    background-size: 100% 100%;
+}
+
+body {
+    background-color: rgb(218, 218, 218);
 }
 
 .box {
@@ -42,4 +49,5 @@ header {
     height: 150px;
     padding: 10px;
     margin-top: 10px;
+    margin-left: 10px;
 }
